--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
   <p>Click a button — that link will open in a new tab. The current page will try to stay focused.</p>
 
   <div id="buttons">
-    <button data-url="https://aiskillshouse.com/student/qr-mediator.html?uid=3261&promptId=16">Open Link 1</button>
-    <button data-url="https://aiskillshouse.com/student/qr-mediator.html?uid=3261&promptId=15">Open Link 2</button>
-    <button data-url="https://aiskillshouse.com/student/qr-mediator.html?uid=3261&promptId=14">Open Link 3</button>
-    <button data-url="https://aiskillshouse.com/student/qr-mediator.html?uid=3261&promptId=13">Open Link 4</button>
-    <button data-url="https://aiskillshouse.com/student/qr-mediator.html?uid=3261&promptId=6">Open Link 5</button>
+    <button data-url="https://aiskillshouse.com/student/qr-mediator.html?uid=3261&promptId=16&pli=1">Open Link 1</button>
+    <button data-url="https://aiskillshouse.com/student/qr-mediator.html?uid=3261&promptId=15&pli=1">Open Link 2</button>
+    <button data-url="https://aiskillshouse.com/student/qr-mediator.html?uid=3261&promptId=14&pli=1">Open Link 3</button>
+    <button data-url="https://aiskillshouse.com/student/qr-mediator.html?uid=3261&promptId=13&pli=1">Open Link 4</button>
+    <button data-url="https://aiskillshouse.com/student/qr-mediator.html?uid=3261&promptId=6&pli=1">Open Link 5</button>
   </div>
 
   <div id="msg"></div>
@@ -84,3 +84,4 @@
   </script>
 </body>
 </html>
+
